syntax = "proto3";
package todoPackage;

import "google/protobuf/empty.proto";

service TodoService {
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc readTodos(google.protobuf.Empty) returns (TodoItems);

  rpc readTodosStream(google.protobuf.Empty) returns (stream TodoItems);
}

message void {}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}
